@@ -1,5 +1,15 @@
 2011-09-15  Andreas Kling  <kling@webkit.org>
 
+        CanvasRenderingContext2D::State copy ctor should use initializer list.
+        https://bugs.webkit.org/show_bug.cgi?id=68152
+
+        Reviewed by Darin Adler.
+
+        * html/canvas/CanvasRenderingContext2D.cpp:
+        (WebCore::CanvasRenderingContext2D::State::State):
+
+2011-09-15  Andreas Kling  <kling@webkit.org>
+
         Don't bother calculating dirty rect for accelerated 2D canvases.
         https://bugs.webkit.org/show_bug.cgi?id=68158
 
